# cosmos-gesture-agent

./: .gitignore  LICENSE  README.md
docs/: ARCHITECTURE_DIAGRAMS.md  COSMOS_PROMPT_AND_SCHEMA.md  GESTURE_DETECTION.md  LATENCY_AND_AMBIGUOUS_POLICY.md  OPTION2_RISKS_AND_MITIGATIONS.md  PROJECT_CONTEXT.md  STATUS.md  SYSTEM_ARCHITECTURE.md
executor/: actions.yaml  pyproject.toml
executor/executor/: main.py
scripts/: run_executor.sh  run_verifier.sh  run_web.sh  smoke_test.sh
shared/: schema.json
verifier/: pyproject.toml
verifier/verifier/: __init__.py  main.py  nim_logic.py  schema_validate.py  stub_logic.py
web/: package.json
web/src/: api.js  gesture.js  index.html  main.js  overlay.js
