[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmos-gesture-verifier"
version = "0.1.0"
description = "Verifier service for cosmos-gesture-agent"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jsonschema>=4.23.0"
]

[tool.setuptools]
packages = ["verifier"]
